# segmentacion-clientes-ecommerce

./: .cruft.json  .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  execute_notebook.py  mkdocs.yml  pyproject.toml
.code_quality/: mypy.ini  ruff.toml
.github/workflows/: ci.yml  docs.yml
api/: __init__.py  main.py  schemas.py
data/04_feature/: rfm_clientes_enriched.parquet
data/05_model_input/: churn_dataset.parquet
data/06_models/: churn_model.pkl  kmeans_model.pkl
data/07_model_output/: churn_predictions.parquet  clientes_segmentados.parquet
deploy/: Dockerfile  README.md  build_cluster_labels.py  build_feature_stats.py  docker-compose.yml
notebooks/: CUMPLIMIENTO_ENTREGA02.md  DECISION_ENRIQUECIMIENTO.md  ENTREGA02_CUMPLIMIENTO.md  FASE2_COMPLETADA.md  PLAN_MODELADO_ENTREGA03.md  README.md  REQUISITOS_ENTREGA02.md  REQUISITOS_ENTREGA02_VERIFICACION.md
notebooks/1-data/: 01-gc-carga_y_limpieza-2026_03_18.ipynb  README.md
notebooks/2-exploration/: 02-gc-eda_ventas-2026_03_18.ipynb  README.md
notebooks/4-feat_eng/: 04-gc-rfm_por_cliente-2026_03_18.ipynb  05-gc-product_enrichment_regex-2026_04_01.ipynb  06-gc-customer_product_profile-2026_04_01.ipynb  README.md
notebooks/5-models/: 07-gc-clustering-2026_04_15.ipynb  08-gc-churn-2026_04_16.ipynb
notebooks/6-interpretation/: 09-gc-analisis_segmentos-2026_04_16.ipynb
notebooks/7-deploy/: api_client.py  streamlit_app.py
notebooks/8-reports/: 10-gc-entrega03_modelado-2026_06_03.ipynb  ENTREGA03_CUMPLIMIENTO.md  (+1 more)
tests/: conftest.py  test_api.py
(+2 files in other folders)
