[project]
name = "segmentacion-clientes-ecommerce"
version = "0.1.0"
description = "Segmentacion de clientes y analisis comercial para optimizar decisiones en un e-commerce basado en el dataset Online Retail de UCI"
authors = [
    "Grupo 12 - ITBA <grupo12@itba.edu.ar>",
]
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    "numpy>=2.4.3",
    "pandas[parquet]>=3.0.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
]

[project.urls]
documentation = "https://grupo-12-itba.github.io/segmentacion-clientes-ecommerce"
repository = "https://github.com/grupo-12-itba/segmentacion-clientes-ecommerce"


[dependency-groups]
dev = [
    "pre-commit>=4.5.1", # Code linting and formatting
    "pytest>=9.0.2", # Testing framework
    "pytest-cookies>=0.7.0",
    "pytest-cov>=7.0.0",
    "cruft[pyproject]>=2.16.0",# Automated Cookiecutter template synchronization
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
]

#
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.5",
    "mkdocstrings[python]>=1.0.3",
    "pymdown-extensions>=10.19",
]
#

[tool.uv]
package = false
default-groups = [
    "dev",
#
    "docs",
#
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.paths]
source = ["src/"]

[tool.coverage.run]
source = ["src"]
omit = ["**/__init__.py"]
